2004-05-19  Naba Kumar  <naba@gnome.org>

	* libanjuta/e-splash.c: Set 'type' at construct time. Fixed
	compiler warning.

2004-05-17  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/editor/text_editor.c: Implemented IAnjutaFile correctly.
	Implemented IAnjutaSavable
	* plugins/editor/plugin.c: Implemented IAnjutaFile and IAnjutaSavable.

2004-05-17  Naba Kumar  <naba@gnome.org>

	* configure.in, plugins/Makefile.am, plugins/profile-default/plugin.c,
	plugins/build-basic-autotools/.cvsignore,
	plugins/build-basic-autotools/Makefile.am,
	plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin.png,
	plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin.ui,
	plugins/build-basic-autotools/anjuta-build-basic-autotools.plugin.in,
	plugins/build-basic-autotools/build-basic-autotools.c,
	plugins/build-basic-autotools/build-basic-autotools.h: Added basic autotools
	build plugin.
	
	* libanjuta/interfaces/libanjuta.idl: Added IAnjutaProject interface
	definition.
	
	* plugins/file-manager/an_file_view.c,
	plugins/file-manager/anjuta-file-manager.ui,
	plugins/file-manager/plugin.c, plugins/file-manager/plugin.h:
	Added context menu UI.
	
	* src/anjuta-app.c, src/anjuta-app.h, src/anjuta.c: Added widgets show/hide
	in view menu.

2004-05-16	Johannes Schmid <jhs@cvs.gnome.org>
	
	* libanjuta/anjuta-preferences.[ch]: 
	Added save/load_gconf functions
	* src/action_callbacks.[ch], src/preferences.c: 
	Load global prefs from gconf at startup and save them
	on exit. Prefs load and save correctly but something resets
	them to default after loading...
	* src/Makefile.am: Hack: Add anjuta-preferences.o to LD_ADD.
	Somehow the linker does not find save/load_gconf functions
	in libanjuta. Must be a stupid mistake, I would be glad
	if someone could fix that.
	* manuals/reference/libanjuta-sections.txt: Added new
	preferences functions and removed gnome-filelist
	* plugins/file-manager/anjuta-file-manager-plugin.glade:
	* plugins/file-manager/plugin.c: