@@ -1,3 +1,9 @@
+2004-06-29  Johannes Schmid <jhs@cvs.gnome.org>
+	
+	* plugins/editor/search-replace.c: Some fixes
+	* plugins/terminal/Makefile.am:
+	Patch from: Alexey Rusakov <ktirf@users.sf.net>
+
 2004-05-19  Naba Kumar  <naba@gnome.org>
 
 	* libanjuta/e-splash.c: Set 'type' at construct time. Fixed
